2004-01-26  Atsushi Enomoto <atsushi@ximian.com>

	* DTMXPathDocument.cs : CreateNavigator() should return the first root
	  as a clone.
	* DTMXPathNavigator.cs : ComparePosition() incorrectly compared 
	  attributes and namespaces orders.  Implemented IsSamePosition() more
	  efficient.  MoveToFirstNamespace() should return false when the 
	  current node is either attribute or namespace.  Fixed IsDescendant()
	  which looks resulted in incorrect behavior.

2003-12-18  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* DTMXPathDocumentBuilder.cs : Removed supportsID argument and always
	  assumes to support IDs when specified XmlValidatingReader.
	  Quick fix for NullReferenceException when type was null.

2003-11-19  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* KeyPattern.cs : Matches() should iterate candidate keys to the end.

2003-11-19  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* IdPattern.cs,
	  KeyPattern.cs : Implemented Matches(), overrode DefaultPriority,
	  modified inheritance.
	* Pattern.cs : Added id and key pattern support.

2003-11-02  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* DTMXPathNavigator.cs : Fixed MoveToNamespace() that might result in
	  infinite loop.

2003-10-04  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* DTMXPathDocumentBuilder.cs : Bugfix for whitespace handling.

2003-10-01  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* Added DTMXPathNode.cs.
	* Fundamental changes in whole DTM stuff. Node information is now array
	  of "node struct" instead of individual arrays.

2003-09-21 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Pattern.cs: save the parser (will reduce memory allocation when
	Jackson's jay patch is committed).

2003-09-20 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Pattern.cs: Typo, when i got //a i was giving off /
	* LocationPathPattern.cs: Append to the tail, not head.

2003-09-14  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* DTMXPathNavigator.cs,
	  DTMXPathDocument.cs,